# fed_topic_modeling

./: .env  .gitignore  project.Rproj  pyproject.toml  requirements.txt  topic_generation.ipynb
notebooks/: bertopic.ipynb  communications_exploration.ipynb  dataset_exploration.ipynb  estimate_effect.Rmd  join_data.ipynb  model_choice.Rmd  news_exploration.ipynb  news_filtering.ipynb  news_sampling.ipynb  presidents_and_chairmen.ipynb  projections.ipynb  proximity.ipynb  search_relevant_documents.ipynb  stm_exploration.Rmd
p-notebooks/: topic_generation.ipynb
r-notebooks/: stm.Rmd
research/: dummy_data.ipynb  frex.ipynb
src/: dummy_data.py  frex.py  generate_topics.py  news_processing.py  pad_vectors.py  preprocessing.py  presidents_and_chairmen.py  run_stm.R  searchK.R
