[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.0",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "nbformat>=4.2.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
]
